--- a/Kochwelt/css/pascal_recipe.css
+++ b/Kochwelt/css/pascal_recipe.css
@@ -163,6 +163,7 @@
     display: flex;
     gap: 10px;
     align-items: center;
+    display: flex;
     font-size: 18px;
     margin-bottom: 20px;
 }
