--- a/Kochwelt/css/rezept_des_tages.css
+++ b/Kochwelt/css/rezept_des_tages.css
@@ -158,6 +158,26 @@
     height: 3px;
 }
 
+.button-selector {
+    font-family: "Raleway", system-ui;
+    font-size: 20px;
+    border-radius: 8px;
+    cursor: pointer;
+    padding: 10px 15px;
+    transition: box-shadow 0.3s ease, transform 0.2s ease;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.button-selector option {
+    line-height: 100; 
+  }
+
+.button-selector:hover {
+    transform: scale(1.05);
+    background-color: #EAEAEA;
+  }
+
+
 .meta-icon {
     width: 20px;
     height: 20px;
