--- a/Kochwelt/css/rezept_des_tages.css
+++ b/Kochwelt/css/rezept_des_tages.css
@@ -17,13 +17,13 @@
 
 
 
-.recipe-1 img {
+#recipe-content > div img {
     width: 280px;
     height: unset;
     aspect-ratio: 1;
     border-radius: 12px;
 }
-.recipe-1 {
+#recipe-content > div {
     padding-top: 1em;
     display: flex;
     flex-direction: row;
@@ -38,81 +38,10 @@
 .recipe-content-text p {
     padding-top: 15px;
 }
-
-.recipe-2 img {
-    width: 280px;
-    height: unset;
-    aspect-ratio: 1;
-    border-radius: 12px;
-}
-.recipe-2 {
-    padding-top: 1em;
-    display: flex;
-    flex-direction: row;
-}
-.recipe-content-text {
-    margin-left: 2em;
-    display: flex;
-    flex-direction: column;
-    float: right;
-    height: 320px;
-}
-.recipe-content-text p {
-    padding-top: 15px;
-}
-
-.recipe-3 img {
-    width: 280px;
-    height: unset;
-    aspect-ratio: 1;
-    border-radius: 12px;
-}
-.recipe-3 {
-    padding-top: 1em;
-    display: flex;
-    flex-direction: row;
-}
-.recipe-content-text {
-    margin-left: 2em;
-    display: flex;
-    flex-direction: column;
-    float: right;
-    height: 320px;
-}
-.recipe-content-text p {
-    padding-top: 15px;
-}
-
-.recipe-4 img {
-    width: 280px;
-    height: unset;
-    aspect-ratio: 1;
-    border-radius: 12px;
-}
-.recipe-4 {
-    padding-top: 1em;
-    display: flex;
-    flex-direction: row;
-}
-.recipe-content-text {
-    margin-left: 2em;
-    display: flex;
-    flex-direction: column;
-    float: right;
-    height: 320px;
-}
-.recipe-content-text p {
-    padding-top: 15px;
-}
-
-
-
-
 
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
+    margin: 0 5%;
 }
 
 .recipe-title {
@@ -125,8 +54,6 @@
 
 .recipe-image {
     width: 100%;
-    height: 300px;
-    aspect-ratio: 1;
     object-fit: cover;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -295,7 +222,6 @@
     display: flex;
     gap: 10px;
     align-items: center;
-    display: flex;
     font-size: 18px;
     margin-bottom: 20px;
 }
@@ -305,4 +231,15 @@
     font-size: 20px;
     margin-bottom: 20px;
 
+}
+
+@media (max-width: 900px) {
+    #recipe-content > div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .recipe-content-text {
+        height: unset;
+    }
 }
