--- a/Kochwelt/css/rezept_des_tages.css
+++ b/Kochwelt/css/rezept_des_tages.css
@@ -92,7 +92,7 @@
     cursor: pointer;
     padding: 10px 15px;
     transition: box-shadow 0.3s ease, transform 0.2s ease;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .button-selector option {
