--- a/Kochwelt/css/adrians_rezept.css
+++ b/Kochwelt/css/adrians_rezept.css
@@ -1,49 +1,55 @@
-.main_container {
-    max-width: 1200px;
-    margin: 0 auto;
+
+.container {
+    margin: 0 5%;
 }
 
-.recept_title {
+.recipe-title {
     text-align: center;
     font-size: 28px;
     font-weight: 600;
     margin-bottom: 20px;
     margin-top: 20px;
 }
-.recept_image {
-    /*Bild im Hintergrund Skalieren ? */
+
+.recipe-image {
     width: 100%;
     height: 300px;
-    background-image: url('./img/Entenbrust.png');
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
     border-radius: 10px;
     margin-bottom: 20px;
-
+    position: static;
 }
 
 .recipe-meta {
     display: flex;
     gap: 20px;
     margin-bottom: 20px;
+    flex-wrap: wrap;
 }
 
 .meta-item {
     display: flex;
     align-items: center;
-    gap: 24px;
+    gap: 26px;
     font-size: 18px;
     background-color: #EAEAEA;
-    padding: 6px 15px;
+    padding: 10px 15px;
     border-radius: 10px;
-    min-width: 150px;}
+    min-width: 150px;
+}
 
-    .meta-icon {
+.border {
+    margin-top: 48px;
+    margin-bottom: 12px;
+    background-color: rgba(168, 165, 165, 0.2);
+    height: 3px;
+}
+
+.meta-icon {
     width: 20px;
     height: 20px;
-    background-image: url('./img/icon-clock.png');
-    background-position: center;
 }
+
 .portion-control {
     display: flex;
     align-items: center;
@@ -54,7 +60,7 @@
 .portion-control input {
     width: 50px;
     padding: 5px;
-    font-size: 18px;
+    font-size: 16px;
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -81,46 +87,43 @@
 .ingredients-title {
     font-size: 20px;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+}
+
+.ingredients-text {
+    font-size: 18px;;
+} 
+
+
+.ingredient-item:nth-child(even) {
+    background-color: #FFFFFF;
+}
+
+.ingredient-item:nth-child(odd) {
+    background-color: #EAEAEA;
 }
 
 .ingredient-item {
     display: flex;
     align-items: center;
+    flex-direction: row;
     padding: 10px 15px;
     font-size: 18px;
     font-weight: 400;
     border-radius: 5px;
-}
-
-.ingredients-text {
-    color: #333;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-size: 18px;
-
-
-
-
-}
-
-.ingredient-item:nth-child(odd) {
-    background-color: #FFFFFF;
-    /*  Weißer Hintergrund für ungerade Zeilen */
-}
-
-.ingredient-item:nth-child(even) {
-    background-color: #EAEAEA;
-    /* Hellgrauer Hintergrund für gerade Zeilen */
+    justify-content: flex-end;
 }
 
 .ingredient-quantity {
-    /* font-weight: 600; */
-    /* Fettschrift für die Mengenangabe */
-    margin-right: 10px;
-    /* Abstand zwischen Menge und Text */
     color: #333;
+    min-width: 60px; 
+    text-align: left; 
 }
+.ingredient-text {
+    flex-grow: 1;
+    text-align: right;
+}
+
 .preparation-section {
     margin-top: 20px;
     width: 250px;
@@ -131,29 +134,26 @@
     display: flex;
     align-items: center;
     gap: 26px;
-    font-size: 18px;
+    font-size: 16px;
     background-color: #EAEAEA;
     padding: 10px 15px;
     border-radius: 10px;
     min-width: 150px;
+    margin-bottom: 10px;
 }
-.border {
-    margin-top: 48px;
-    margin-bottom: 12px;
-    background-color: rgba(168, 165, 165, 0.2);
-    height: 1px;
-}
+
+
+
+
 .profile {
     display: flex;
     border-radius: 10px;
     margin-bottom: 20px;
+    padding-top: 10px;
 }
 
 .profile-image {
     width: 90px;
-    background-image: url('./img/user.jpg');
-    background-size: cover;
-    background-position: center;
     border-radius: 50%;
     margin-right: 20px;
 }
@@ -173,6 +173,5 @@
     margin-bottom: 20px;
 
 }
-
 
 
