--- a/Kochwelt/css/index.css
+++ b/Kochwelt/css/index.css
@@ -39,11 +39,8 @@ header {
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    /* position: sticky; */
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     top: 0;
-    /* z-index: 1000; */
 }
 
 .logo-head img {
@@ -130,7 +127,6 @@ nav a:hover::after {
     display: flex;
     flex-direction: column;
     float: right;
-    height: 320px;
     margin-right: 5%;
 }
 
@@ -241,46 +237,42 @@ nav a:hover::after {
 
 
 /* Styling Footer */
-
+footer {
+    background-color: #403B3B;
+}
 .footer {
-    width: 100%;
+    margin: 0 5%;
     font-family:"Raleway", system-ui;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #403B3B;}
+    background-color: #403B3B;
+}
 
 .footer_logo{
     height: 75px;
     width: 225px;
-    margin-left: 5%;
 }
 
-
+.impressum_contact {
+    display: flex;
+    gap: 20px;
+}
 
 .impressum_contact a {
     color: white;
     text-decoration: none;
-    margin-left:  50px;
 }
-
 
 .impressum_contact a:hover{
     text-decoration: underline;
     color: white;
-}
-.socials{
-    margin-right: 5%;
 }
 
 .socials a:hover{
     text-decoration: none;
     filter: drop-shadow(0px 0px 10px #c0bfbf);
 }
-
-
-
-
 
 
 
@@ -301,11 +293,15 @@ nav a:hover::after {
         flex-wrap: wrap;
         justify-content: center;
     }
-
     .menu {
         margin-bottom: 20px;
     }
+    .recipe-section {
+        flex-direction: column;
+        align-items: center;
+    }
 }
+
 
 .mobile-nav-links {
     overflow-x: hidden;
@@ -336,10 +332,7 @@ nav a:hover::after {
     padding-left: 0.5em;
 }
 @media (max-width: 800px) {
-    .recipe-section {
-        flex-direction: column;
-        align-items: center;
-    }
+
     .recipe-content {
         margin-top: 2em;
         height: unset;
