--- a/Kochwelt/css/pascal_recipe.css
+++ b/Kochwelt/css/pascal_recipe.css
@@ -1,7 +1,6 @@
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
+    margin: 0 5%;
 }
 
 .recipe-title {
@@ -163,6 +162,7 @@
     display: flex;
     gap: 10px;
     align-items: center;
+    display: flex;
     font-size: 18px;
     margin-bottom: 20px;
 }
