--- a/Kochwelt/css/ramon_rezept.css
+++ b/Kochwelt/css/ramon_rezept.css
@@ -1,4 +1,3 @@
-
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -15,6 +14,7 @@
 .recipe-image {
     width: 100%;
     height: 300px;
+    object-fit: cover;
     border-radius: 10px;
     margin-bottom: 20px;
     image-rendering: optimizeSpeed;
@@ -25,6 +25,7 @@
     display: flex;
     gap: 20px;
     margin-bottom: 20px;
+    flex-wrap: wrap;
 }
 
 .meta-item {
@@ -84,6 +85,18 @@
 
 .ingredients-section {
     margin-top: 20px;
+    padding-bottom: 20px;
+}
+
+.ingrediants-table {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Genau zwei Spalten */
+    gap: 20px; /* Abstand zwischen Spalten und Zeilen */
+}
+
+tbody {
+    width: 300px;
+    padding-bottom: 30px;
 }
 
 .ingredients-title {
@@ -96,17 +109,25 @@
     display: flex;
     align-items: center;
     padding: 10px 15px;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 400;
     border-radius: 5px;
+    width: 100%;
 }
 
-.ingredient-item:nth-child(odd) {
+.ingredients-header {
+    font-size: 20px;
+    font-weight: bold;
+    padding-bottom: 15px;
+    padding-top: 15px;
+}
+
+.ingredient-item:nth-child(even) {
     background-color: #FFFFFF;
     /*  Weißer Hintergrund für ungerade Zeilen */
 }
 
-.ingredient-item:nth-child(even) {
+.ingredient-item:nth-child(odd) {
     background-color: #EAEAEA;
     /* Hellgrauer Hintergrund für gerade Zeilen */
 }
@@ -134,6 +155,10 @@
     padding: 10px 15px;
     border-radius: 10px;
     min-width: 150px;
+}
+
+.ingredients-text {
+    font-size: 20px;
 }
 
 
@@ -167,5 +192,44 @@
 .profile-title {
     font-size: 20px;
     margin-bottom: 20px;
-
 }
+
+@media (max-width: 970px) {
+    .ingrediants-table {
+        display: grid; /* Wechselt von flex zu grid */
+        grid-template-columns: repeat(2, 1fr); /* Genau zwei Spalten */
+        gap: 20px; /* Abstand zwischen Spalten und Zeilen */
+    }
+
+    .ingredient-item {
+        width: 100%; /* Passt sich an den verfügbaren Platz in der Spalte an */
+    }
+
+    tbody {
+        width: 100%; /* Stellt sicher, dass die Tabellenbereiche im Grid funktionieren */
+    }
+
+    .ingredients-header {
+        grid-column: span 2; /* Überspannt die gesamte Breite (beide Spalten) */
+        text-align: center; /* Zentriert den Text */
+    }
+}
+
+@media (max-width: 520px) {
+    .ingrediants-table {
+        grid-template-columns: repeat(1, 1fr); /* Genau 1 Spalten */
+        gap: 20px; /* Abstand zwischen Spalten und Zeilen */
+    }
+
+    .ingredients-header {
+        grid-column: span 2; /* Überspannt die gesamte Breite (beide Spalten) */
+        text-align: center; /* Zentriert den Text */
+    }
+
+    .recipe-title {
+        font-size: 20px;
+    }
+}
+
+
+
