--- a/Kochwelt/css/kontakt.css
+++ b/Kochwelt/css/kontakt.css
@@ -1,8 +1,4 @@
-body{
-    margin: 0;
-    padding: 0;
-    height: 100%;
-}
+
 main {
     
     display: flex;
@@ -11,11 +7,11 @@ main {
     justify-content: center;
     align-items: center;
     font-family: "Raleway", system-ui;
-
-   
+    flex-grow: 1;
     background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding-top: 100px;
+    padding-bottom: 220px;
 
   
 }
@@ -53,4 +49,10 @@ button {
 }
 button:hover {
     background-color: #45a049;
+}
+
+footer {
+    bottom: 0;
+    position: absolute;
+    width: 100%;
 }
